--- a/us/trabajos.html
+++ b/us/trabajos.html
@@ -349,7 +349,7 @@
         <div id="trabajos" class="section nomargin noborder">
             <div class="container-fluid">
                 <div class="heading-block center">
-                    <h2>Últimos trabajos web, conoce la calidad de ellos.</h2>
+                    <h2>Latest web jobs, know the quality of them.</h2>
                 </div>
                 <div id="image-carousel" class="owl-carousel carousel-widget" data-margin="24" data-nav="true" data-pagi="true" data-items-xs="1" data-items-sm="1" data-items-md="1" data-items-lg="2" data-items-xl="2" style="padding: 0 20px" data-lightbox="gallery">
                     <div class="slide slide--1">
@@ -401,13 +401,13 @@
                     <div class="col-lg-3 mt-3">
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
-                            <span>Contáctanos</span>
+                            <span>Contact Us</span>
                         </a>
                     </div>
                     <div class="col-lg-9 center">
                         <div class="heading-block">
-                            <h2 class="texto-blanco">Hacemos realidad tus sueños por el mejor precio.</h2>
-                            <span class="texto-blanco t300">Obtener tu identidad nunca fue tan fácil.</span>
+                            <h2 class="texto-blanco">We make your dreams come true for the best price.</h2>
+                            <span class="texto-blanco t300">Getting your identity has never been easier.</span>
                         </div>
                     </div>
                 </div>
@@ -416,7 +416,7 @@
         <div id="trabajos" class="section nomargin noborder">
             <div class="container-fluid">
                 <div class="heading-block center">
-                    <h2>Últimos diseños realizados, conoce la calidad de ellos.</h2>
+                    <h2>Latest web jobs, know the quality of them.</h2>
                 </div>
                 <div id="image-carousel" class="owl-carousel carousel-widget" data-margin="24" data-nav="true" data-pagi="true" data-items-xs="1" data-items-sm="1" data-items-md="1" data-items-lg="2" data-items-xl="2" style="padding: 0 20px" data-lightbox="portafolio">
                     <div class="slide slide--1">
@@ -467,7 +467,7 @@
         <div class="container">
             <div class="footer-widgets-wrap clearfix">
                 <div class="heading-block center">
-                    <h2 class="texto-blanco">Contacto</h2>
+                    <h2 class="texto-blanco">Contact</h2>
                 </div>
                 <form name="contac-form" id="contact-form" class="col-lg-12" method="post" action="">
                     <div class="row clearfix">
@@ -475,38 +475,42 @@
                             <div class="widget clearfix">
                                 <div class="form-row">
                                     <div class="form-group col-lg-6">
-                                        <label class="texto-blanco" for="nombre">Nombre (*)</label>
-                                        <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre" required>
+                                        <label class="texto-blanco" for="nombre">Name (*)</label>
+                                        <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Name">
                                     </div>
                                     <div class="form-group col-lg-6">
                                         <label class="texto-blanco" for="correo">Email (*)</label>
-                                        <input type="email" class="form-control" id="correo" name="correo" placeholder="Email" required>
+                                        <input type="email" class="form-control" id="correo" name="correo" placeholder="Email">
                                     </div>
                                 </div>
                                 <div class="form-row">
                                     <div class="form-group col-lg-6">
-                                        <label class="texto-blanco" for="telefono">Numero (*)</label>
-                                        <input type="text" class="form-control" id="telefono" name="telefono" placeholder="Numero" required>
+                                        <label class="texto-blanco" for="telefono">Number (*)</label>
+                                        <input type="text" class="form-control" id="telefono" name="telefono" placeholder="Number">
                                     </div>
                                     <div class="form-group col-lg-6">
-                                        <label class="texto-blanco" for="asunto">Asunto (*)</label>
-                                        <input type="text" class="form-control" id="asunto" name="asunto" placeholder="Cotizaciones, soporte, inquietudes">
+                                        <label class="texto-blanco" for="asunto">Subject (*)</label>
+                                        <input type="text" class="form-control" id="asunto" name="asunto" placeholder="Quotes, support, concerns">
                                     </div>
                                 </div>
-                                <button type="button" id="puto" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
+                                <button id="enviar" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
                                     <i class="icon-line-arrow-right"></i>
-                                    <span>Enviar</span>
+                                    <span>Send</span>
                                 </button>
                             </div>
                         </div>
                         <div class="d-none d-md-block d-lg-none bottommargin-sm"></div>
                         <div class="col-lg-6">
                             <div class="form-group">
-                                <label class="texto-blanco" for="mensaje">Mensaje (*)</label>
-                                <textarea class="form-control" id="mensaje" name="mensaje" rows="7" cols="30" placeholder="Escribe tu mensaje" required></textarea>
+                                <label class="texto-blanco" for="mensaje">Message (*)</label>
+                                <textarea class="form-control" id="mensaje" name="mensaje" rows="7" cols="30" placeholder="Your Message"></textarea>
                             </div>
                         </div>
                     </div>
+                    <button type="button" id="puto" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
+                        <i class="icon-line-arrow-right"></i>
+                        <span>Send</span>
+                    </button>
                     <div class="w-100 d-block d-md-block d-lg-none line"></div>
                 </form>
                 <div class="line"></div>
@@ -518,7 +522,7 @@
                                     <div class="col-lg-4">
                                         <div class="footer-big-contacts texto-blanco">
                                             <i class="icon-phone3"></i>
-                                            <span>Teléfonos:</span>
+                                            <span>Phones:</span>
                                             <a class="texto-blanco" href="tel:+584245853827">
                                                 (+58) 4245853827
                                             </a> 
@@ -546,7 +550,7 @@
                                     <div class="col-lg-4">
                                         <div class="footer-big-contacts texto-blanco">
                                             <i class="icon-map-marker2"></i>
-                                            <span>Dirección:</span>
+                                            <span>Address:</span>
                                             <a target="_blank" class="texto-blanco" href="https://goo.gl/maps/GGcN7JQiqCw">
                                                 Urb Petimora 2, Cabudare, Estado Lara.
                                             </a>
@@ -563,7 +567,7 @@
         </div>
         <div id="copyrights">
             <div class="container center clearfix texto-blanco">
-                Copyrights &copy; 2019. Todos los derechos son reservados por CreativosPlus.
+                Copyrights &copy; 2019. All rights reserved by <a class="texto-blanco" href="index.html">Creativosplus</a>.
             </div>
         </div>
     </footer>
