--- a/us/marketing.html
+++ b/us/marketing.html
@@ -354,12 +354,12 @@
                     <div class="col-lg-7">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
-                            <h2 style="font-size: 42px;" class="font-body ls1 t500">Campañas de Marketing</h2>
+                            <h2 style="font-size: 42px;" class="font-body ls1 t500">Marketing Campaigns</h2>
                         </div>
-                        <p class="lead text-justify">Buscamos convertirnos en tu mejor aliado, con nosotros podrás encontrar todas las herramientas necesarias para que tu marca llegue a todos tus clientes potenciales a través de diferentes medios digitales.</p>
+                        <p class="lead text-justify">We seek to become your best ally, with us you can find all the necessary tools for your brand to reach all your potential customers through different digital media.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
-                            <span>Contáctanos</span>
+                            <span>Contact Us</span>
                         </a>
                     </div>
                 </div>
@@ -373,10 +373,10 @@
                         <div class="emphasis-title bottommargin-sm">
                             <h2 style="font-size: 42px;" class="font-body ls1 t400">Social Media</h2>
                         </div>
-                        <p class="lead text-justify">Tus potenciales clientes están en la red, es por esto que tu marca debe estarlo también. CreativosPlus busca trasmitir el ADN de tu marca en las plataformas digitales más importantes, creando estrategias y anuncios de valor para posicionar tu marca y crear una comunidad activa.</p>
+                        <p class="lead text-justify">Your potential customers are on the net, that's why your brand must be too. CreativosPlus seeks to transmit the DNA of your brand in the most important digital platforms, creating strategies and value ads to position your brand and create an active community.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
-                            <span>Contáctanos</span>
+                            <span>Contact Us</span>
                         </a>
                     </div>
                     <div class="col-lg-5 center">
@@ -394,10 +394,10 @@
                         <div class="emphasis-title bottommargin-sm">
                             <h2 style="font-size: 42px;" class="font-body ls1 t400">Branding</h2>
                         </div>
-                        <p class="lead text-justify">Diseñamos una estrategia de medición de acuerdo a los objetivos de tu negocio, conociendo donde están tus clientes más activos.</p>
+                        <p class="lead text-justify">We design a measurement strategy according to your business objectives, knowing where your most active clients are.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
-                            <span>Contáctanos</span>
+                            <span>Contact Us</span>
                         </a>
                     </div>
                 </div>
@@ -411,7 +411,7 @@
         <div class="container">
             <div class="footer-widgets-wrap clearfix">
                 <div class="heading-block center">
-                    <h2 class="texto-blanco">Contacto</h2>
+                    <h2 class="texto-blanco">Contact</h2>
                 </div>
                 <form name="contac-form" id="contact-form" class="col-lg-12" method="post" action="">
                     <div class="row clearfix">
@@ -419,8 +419,8 @@
                             <div class="widget clearfix">
                                 <div class="form-row">
                                     <div class="form-group col-lg-6">
-                                        <label class="texto-blanco" for="nombre">Nombre (*)</label>
-                                        <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre">
+                                        <label class="texto-blanco" for="nombre">Name (*)</label>
+                                        <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Name">
                                     </div>
                                     <div class="form-group col-lg-6">
                                         <label class="texto-blanco" for="correo">Email (*)</label>
@@ -429,28 +429,32 @@
                                 </div>
                                 <div class="form-row">
                                     <div class="form-group col-lg-6">
-                                        <label class="texto-blanco" for="telefono">Numero (*)</label>
-                                        <input type="text" class="form-control" id="telefono" name="telefono" placeholder="Numero">
+                                        <label class="texto-blanco" for="telefono">Number (*)</label>
+                                        <input type="text" class="form-control" id="telefono" name="telefono" placeholder="Number">
                                     </div>
                                     <div class="form-group col-lg-6">
-                                        <label class="texto-blanco" for="asunto">Asunto (*)</label>
-                                        <input type="text" class="form-control" id="asunto" name="asunto" placeholder="Cotizaciones, soporte, inquietudes">
+                                        <label class="texto-blanco" for="asunto">Subject (*)</label>
+                                        <input type="text" class="form-control" id="asunto" name="asunto" placeholder="Quotes, support, concerns">
                                     </div>
                                 </div>
-                                <button type="button" id="puto" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
+                                <button id="enviar" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
                                     <i class="icon-line-arrow-right"></i>
-                                    <span>Enviar</span>
+                                    <span>Send</span>
                                 </button>
                             </div>
                         </div>
                         <div class="d-none d-md-block d-lg-none bottommargin-sm"></div>
                         <div class="col-lg-6">
                             <div class="form-group">
-                                <label class="texto-blanco" for="mensaje">Mensaje (*)</label>
-                                <textarea class="form-control" id="mensaje" name="mensaje" rows="7" cols="30" placeholder="Escribe tu mensaje"></textarea>
+                                <label class="texto-blanco" for="mensaje">Message (*)</label>
+                                <textarea class="form-control" id="mensaje" name="mensaje" rows="7" cols="30" placeholder="Your Message"></textarea>
                             </div>
                         </div>
                     </div>
+                    <button type="button" id="puto" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
+                        <i class="icon-line-arrow-right"></i>
+                        <span>Send</span>
+                    </button>
                     <div class="w-100 d-block d-md-block d-lg-none line"></div>
                 </form>
                 <div class="line"></div>
@@ -462,7 +466,7 @@
                                     <div class="col-lg-4">
                                         <div class="footer-big-contacts texto-blanco">
                                             <i class="icon-phone3"></i>
-                                            <span>Teléfonos:</span>
+                                            <span>Phones:</span>
                                             <a class="texto-blanco" href="tel:+584245853827">
                                                 (+58) 4245853827
                                             </a> 
@@ -490,7 +494,7 @@
                                     <div class="col-lg-4">
                                         <div class="footer-big-contacts texto-blanco">
                                             <i class="icon-map-marker2"></i>
-                                            <span>Dirección:</span>
+                                            <span>Address:</span>
                                             <a target="_blank" class="texto-blanco" href="https://goo.gl/maps/GGcN7JQiqCw">
                                                 Urb Petimora 2, Cabudare, Estado Lara.
                                             </a>
@@ -507,7 +511,7 @@
         </div>
         <div id="copyrights">
             <div class="container center clearfix texto-blanco">
-                Copyrights &copy; 2019. Todos los derechos son reservados por <a class="texto-blanco" href="index.html">Creativosplus</a>.
+                Copyrights &copy; 2019. All rights reserved by <a class="texto-blanco" href="index.html">Creativosplus</a>.
             </div>
         </div>
     </footer>
