--- a/us/index.html
+++ b/us/index.html
@@ -606,7 +606,7 @@
                                 <li class="carousel-grid-item">
                                     <div class="item bgcolor d-flex align-items-center px-4" style="min-height: 200px">
                                         <blockquote class="blockquote border-0 mb-0">
-                                            <p class="mb-3 text-white">"La idea no es vivir para siempre, es crear algo que sí lo haga."</p>
+                                            <p class="mb-3 text-white">"The idea is not to live forever, it's to create something that does."</p>
                                             <footer class="blockquote-footer text-white-50 font-italic">Andy Warhol</footer>
                                         </blockquote>
                                     </div>
