--- a/us/trabajos.html
+++ b/us/trabajos.html
@@ -366,8 +366,8 @@
                                 <li class="carousel-grid-item">
                                     <div class="item bgcolor d-flex align-items-center px-4" style="min-height: 200px">
                                         <blockquote class="blockquote border-0 mb-0">
-                                            <p class="mb-3 text-white">"The Spirit of CoWorking Allows You to Find CoWorkers Who're Worth Working with."</p>
-                                            <footer class="blockquote-footer text-white-50 font-italic">Cynthia Chiam</footer>
+                                            <p class="mb-3 text-white">"People ignore design that ignores people."</p>
+                                            <footer class="blockquote-footer text-white-50 font-italic">Frank Chimero</footer>
                                         </blockquote>
                                     </div>
                                 </li>
@@ -431,8 +431,8 @@
                                 <li class="carousel-grid-item">
                                     <div class="item bgcolor d-flex align-items-center px-4" style="min-height: 280px">
                                         <blockquote class="blockquote border-0 mb-0">
-                                            <p class="mb-3 text-white">"The Spirit of CoWorking Allows You to Find CoWorkers Who're Worth Working with."</p>
-                                            <footer class="blockquote-footer text-white-50 font-italic">Cynthia Chiam</footer>
+                                            <p class="mb-3 text-white">"Good design is obvious. Great design is transparent."</p>
+                                            <footer class="blockquote-footer text-white-50 font-italic">Joe Sparano</footer>
                                         </blockquote>
                                     </div>
                                 </li>
