--- a/us/index.html
+++ b/us/index.html
@@ -485,7 +485,7 @@
                 <div class="row">
                     <div class="col-lg-9">
                         <div class="heading-block center">
-							<h2 class="texto-blanco">Having a presence on the internet has never been so necessary.</h2>
+							<h2 class="texto-blanco">Having a presence on the internet has never been so necessary</h2>
 							<span class="texto-blanco t300">The identity of your business awaits you.</span>
 						</div>
                     </div>
@@ -501,7 +501,7 @@
         <div id="servicios" class="section nomargin boborder" style="background: url('../images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
             <div class="container clearfix">
                 <div class="heading-block center">
-                    <h2> We offer the best web services for you.</h2>
+                    <h2> We offer the best web services for you</h2>
                 </div>
             </div>
             <div id="oc-features" class="owl-carousel owl-carousel-full image-carousel carousel-widget fixBoton">
@@ -511,7 +511,7 @@
                             <img src="../images/servicios/web.jpg" alt="Diseño Web Profesional">
                         </div>
                         <div class="col-lg-4" style="padding: 20px 0 0 20px;">
-                            <h3>professional web design</h3>
+                            <h3>Professional Web Design</h3>
                             <p class="lead text-justify">We work with you, to offer you the website and identity that your business needs, looking for a unique and impressive design for your customers.</p>
                             <a class="btn-verde button button-3d button-reveal button-sm tright button-rounded" href="diseno-web.html">
                                 <i class="icon-line-arrow-right"></i>
@@ -526,7 +526,7 @@
                             <img src="../images/servicios/grafico.jpg" alt="">
                         </div>
                         <div class="col-lg-4" style="padding: 20px 0 0 20px;">
-                            <h3>professional Graphic Design</h3>
+                            <h3>Professional Graphic Design</h3>
                             <p class="lead text-justify">We know the philosophy of each brand creating the best designs to enhance the identity of your organization, company or company.</p>
                             <a class="btn-verde button button-3d button-reveal button-sm tright button-rounded" href="diseno-grafico.html">
                                 <i class="icon-line-arrow-right"></i>
@@ -541,7 +541,7 @@
                             <img src="../images/servicios/marketing.jpg" alt="">
                         </div>
                         <div class="col-lg-4" style="padding: 20px 0 0 20px;">
-                            <h3>Marketing</h3>
+                            <h3>Digital Marketing</h3>
                             <p class="lead text-justify">
                                 Develop hand in hand with CreativosPlus in the area of digital marketing strategies and solutions that allow you to achieve the goals of your business.</p>
                             <a class="btn-verde button button-3d button-reveal button-sm tright button-rounded" href="marketing.html">
@@ -579,7 +579,7 @@
                     </div>
                     <div class="col-lg-9 center">
                         <div class="heading-block">
-                            <h2 class="texto-blanco">We make your dreams come true for the best price.</h2>
+                            <h2 class="texto-blanco">We make your dreams come true for the best price</h2>
                             <span class="texto-blanco t300">Getting your identity has never been easier.</span>
                         </div>
                     </div>
@@ -589,7 +589,7 @@
         <div id="trabajos" class="section nomargin noborder" style="background: url('../images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
             <div class="container-fluid">
                 <div class="heading-block center">
-                    <h2>Latest web jobs, know the quality of them.</h2>
+                    <h2>Latest web jobs, know the quality of them</h2>
                 </div>
                 <div id="image-carousel" class="owl-carousel carousel-widget" data-margin="24" data-nav="true" data-pagi="true" data-items-xs="1" data-items-sm="1" data-items-md="1" data-items-lg="2" data-items-xl="2" style="padding: 0 20px" data-lightbox="gallery">
                     <div class="slide slide--1">
@@ -640,7 +640,7 @@
                 <div class="row">
                     <div class="col-lg-9">
                         <div class="heading-block center">
-                            <h2 class="texto-blanco">Don't wait any longer to get your presence on the Internet.</h2>
+                            <h2 class="texto-blanco">Don't wait any longer to get your presence on the Internet</h2>
                             <span class="texto-blanco t300">Your business in the hands of experts.</span>
                         </div>
                     </div>
@@ -656,7 +656,7 @@
         <div class="section nomargin noborder" id="testimonios" style="background: url('../images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
             <div class="container clearfix">
                 <div class="heading-block center">
-                    <h2>Clients who have trusted us.</h2>
+                    <h2>Clients who have trusted us</h2>
                 </div>
                 <div id="oc-testi" class="owl-carousel testimonials-carousel carousel-widget clearfix" data-margin="0" data-pagi="true" data-loop="true" data-center="true" data-autoplay="5000" data-items-sm="1" data-items-md="2" data-items-xl="3">
                     <div class="oc-item">
@@ -748,7 +748,7 @@
                                         <input type="text" class="form-control" id="asunto" name="asunto" placeholder="Quotes, support, concerns">
                                     </div>
                                 </div>
-                                <button id="enviar" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
+                                <button type="button" id="puto2" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
                                     <i class="icon-line-arrow-right"></i>
                                     <span>Send</span>
                                 </button>
@@ -762,10 +762,6 @@
                             </div>
                         </div>
                     </div>
-                    <button type="button" id="puto" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
-                        <i class="icon-line-arrow-right"></i>
-                        <span>Send</span>
-                    </button>
                     <div class="w-100 d-block d-md-block d-lg-none line"></div>
                 </form>
                 <div class="line"></div>
