--- a/us/nosotros.html
+++ b/us/nosotros.html
@@ -353,7 +353,7 @@
             <div class="row clearfix">
                <div class="col-lg-7">
                   <div class="heading-block topmargin center" style="margin-bottom: 0 !important;">
-                     <h2>Know more about us.</h2>
+                     <h2>Know more about us</h2>
                   </div>
                   <p class="lead text-justify">In CreativosPlus we build high quality websites, with unique designs, innovative and friendly to your customers. We are that PLUS that will make your website an effective solution to your digital strategy.</p>
                   <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
@@ -436,7 +436,7 @@
       <div class="section noborder nomargin" id="testimonios" style="background: url('../images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
          <div class="container">
             <div class="heading-block center">
-               <h2>Clients who have trusted us.</h2>
+               <h2>Clients who have trusted us</h2>
             </div>
             <div id="oc-testi" class="owl-carousel testimonials-carousel carousel-widget clearfix" data-margin="0" data-pagi="true" data-loop="true" data-center="true" data-autoplay="5000" data-items-sm="1" data-items-md="2" data-items-xl="3">
                <div class="oc-item">
@@ -573,9 +573,9 @@
                                       <input type="text" class="form-control" id="asunto" name="asunto" placeholder="Quotes, support, concerns">
                                   </div>
                               </div>
-                              <button id="enviar" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
-                                  <i class="icon-line-arrow-right"></i>
-                                  <span>Send</span>
+                              <button type="button" id="puto2" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
+                                 <i class="icon-line-arrow-right"></i>
+                                 <span>Send</span>
                               </button>
                           </div>
                       </div>
@@ -587,10 +587,6 @@
                           </div>
                       </div>
                   </div>
-                  <button type="button" id="puto" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
-                      <i class="icon-line-arrow-right"></i>
-                      <span>Send</span>
-                  </button>
                   <div class="w-100 d-block d-md-block d-lg-none line"></div>
               </form>
               <div class="line"></div>
